--- a/phone.html
+++ b/phone.html
@@ -40,10 +40,10 @@
            
             <div class="notifications"> <a href="https://in.pinterest.com/"><img src="media/download.png" alt="pinterest" class="pinterest"></a></div>
         </div>
-        <div class="notification">
-            <a href="https://www.google.com/"><img src="media/google_icon_-_dribbble.webp" alt="google icon" class="google-icon"></a>
-        </div>
-
+        
+<div>
+ <input class="search" type="text" placeholder="search">
+</div>
     </main>
 </body>
 </html>
